# GenPhysX

./: .gitignore  .gitlab-ci.yml  BioGenX.tcl  CMakeLists.txt  Data  GenCULUC.tcl  GenPhysX  GenPhysX.code-workspace  GenPhysX.tcl  GenX.tcl  GeoPhysX.tcl  HydroX.tcl  IndustrX.tcl  MANIFEST  README.md  UrbanPhysX.tcl  UrbanX-ClassesLUT.tcl  UrbanX.tcl  VERSION  config  config.in  makeit
.ssm.d/: control  post-install
doc/: CULUC-colormap.rgba  TEB-Params_LUT.csv  TEB-Params_LUT.xls  UrbanX-Classes_LUT.xls  UrbanX-LUT.xls
lib/: BioGenX.tcl  GenX.tcl  GeoPhysX.tcl  HydroX.tcl  UrbanPhysX.tcl  UrbanX.tcl
src/: CMakeLists.txt  Makefile.in  aclocal.m4  configure.in  makeit
src/generic/: GeoPhy.c  GeoPhy.h  lpass_minmax_flt.f  tclGeoPhy.c
src/m4/: ax_lib_eer.m4  ax_lib_rmn.m4
tcl/: BioGenX.tcl  GenCULUC.tcl  GenPhysX.tcl  GenX.tcl  GeoPhysX.tcl  HydroX.tcl  IndustrX.tcl  UrbanPhysX.tcl  UrbanX-ClassesLUT.tcl  UrbanX.tcl
test/: CI.sh  test.sh
